--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,7 +107,8 @@
             android:id="@+id/ivMinus"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.1"/>
+            android:layout_weight="0.15"
+            app:tint="@color/colorOnPrimary" />
 
         <TextView
             android:id="@+id/tvSplitNum"
@@ -116,14 +117,16 @@
             android:textSize="30sp"
             android:textAlignment="center"
             android:layout_height="wrap_content"
-            android:layout_weight="0.3"/>
+            android:layout_weight="0.2"
+            android:textColor="@color/colorPrimary"/>
 
         <ImageView
             android:src="@drawable/ic_plus"
             android:id="@+id/ivPlus"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.1"/>
+            android:layout_weight="0.15"
+            app:tint="@color/colorOnPrimary" />
 
     </LinearLayout>
 
